# gazelle-kotlin

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  go.mod  go.sum  go_deps.bzl  maven_install.json  tools.go
.github/: ci.yaml  lint.sh
.github/workflows/: ci.yaml
kotlin/: BUILD.bazel  config.go  fix.go  generate.go  generate_test.go  kinds.go  lang.go  lifecycle.go  resolve.go
kotlin/internal/: BUILD.bazel  kotlinparser.go  kotlinparser_test.go  maven.go  maven_test.go
kotlin/internal/testdata/: BUILD.bazel
kotlin/protobuf/: BUILD.bazel  kotlin_parser.pb.go  kotlin_parser.proto  kotlin_parser_service.pb.go  kotlin_parser_service.proto
kotlin/src/com/github/srmocher/gazelle_kotlin/kotlinparser/: BUILD.bazel  GrpcServer.kt  KotlinParserServer.kt  Main.kt  Parser.kt
kotlin/test/com/github/srmocher/gazelle_kotlin/kotlinparser/: BUILD.bazel  ParserTest.kt
kotlin/test/com/github/srmocher/gazelle_kotlin/kotlinparser/testdata/: BUILD.bazel  ExampleFile.kt  ExampleFile2.kt  InvalidKotlinFile.kt
kotlin/testdata/: maven_install.json
kotlin/testdata/lib_with_protos/src/main/com/foo/: BUILD.want  Foo.kt  bar.proto
kotlin/testdata/simple/src/main/com/foo/: BUILD.want  Foo.kt
