load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_kotlin//kotlin:core.bzl", "define_kt_toolchain")

# gazelle:prefix github.com/srmocher/gazelle-kotlin
# gazelle:resolve proto proto google/rpc/status.proto @googleapis//google/rpc:status_proto
# gazelle:resolve proto go google/rpc/status.proto  @org_golang_google_genproto_googleapis_rpc//status:status
# gazelle:resolve proto go google.golang.org/grpc/internal/status @googleapis//google/rpc:status_go_proto
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=go_deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

define_kt_toolchain(
    name = "kotlin_toolchain",
    api_version = "1.8",  # "1.1", "1.2", "1.3", "1.4", "1.5" "1.6", "1.7", "1.8", or "1.9"
    jvm_target = "11",  # "1.6", "1.8", "9", "10", "11", "12", "13", "15", "16", or "17"
    language_version = "1.8",  # "1.1", "1.2", "1.3", "1.4", "1.5" "1.6", "1.7", "1.8", or "1.9"
)
