load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "kotlin",
    srcs = [
        "config.go",
        "fix.go",
        "generate.go",
        "kinds.go",
        "lang.go",
        "resolve.go",
    ],
    importpath = "github.com/srmocher/gazelle-kotlin/kotlin",
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_gazelle//config:go_default_library",
        "@bazel_gazelle//language:go_default_library",
        "@bazel_gazelle//rule:go_default_library",
    ],
)
