load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "kotlin",
    srcs = [
        "config.go",
        "fix.go",
        "generate.go",
        "kinds.go",
        "lang.go",
        "lifecycle.go",
        "resolve.go",
    ],
    importpath = "github.com/srmocher/gazelle-kotlin/kotlin",
    visibility = ["//visibility:public"],
    deps = [
        "//kotlin/internal",
        "//kotlin/protobuf",
        "@bazel_gazelle//config:go_default_library",
        "@bazel_gazelle//label:go_default_library",
        "@bazel_gazelle//language:go_default_library",
        "@bazel_gazelle//language/proto:go_default_library",
        "@bazel_gazelle//repo:go_default_library",
        "@bazel_gazelle//resolve:go_default_library",
        "@bazel_gazelle//rule:go_default_library",
    ],
)

go_test(
    name = "kotlin_test",
    srcs = ["generate_test.go"],
    data = glob(
        ["testdata/**"],
    ) + ["//kotlin/src/com/github/srmocher/gazelle_kotlin/kotlinparser:parser_server"],
    embed = [":kotlin"],
    deps = [
        "@bazel_gazelle//config:go_default_library",
        "@bazel_gazelle//language:go_default_library",
        "@bazel_gazelle//merger:go_default_library",
        "@bazel_gazelle//resolve:go_default_library",
        "@bazel_gazelle//rule:go_default_library",
        "@bazel_gazelle//testtools:go_default_library",
        "@bazel_gazelle//walk:go_default_library",
        "@com_github_bazelbuild_buildtools//build",
        "@com_github_google_go_cmp//cmp",
        "@com_github_stretchr_testify//assert",
    ],
)
