load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "internal",
    srcs = [
        "kotlinparser.go",
        "maven.go",
    ],
    data = [
        # keep
        "//kotlin/src/com/github/srmocher/gazelle_kotlin/kotlinparser:parser_server",
    ],
    importpath = "github.com/srmocher/gazelle-kotlin/kotlin/internal",
    visibility = ["//kotlin:__subpackages__"],
    deps = [
        "//kotlin/protobuf",
        "@io_bazel_rules_go//go/runfiles:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials/insecure",
    ],
)
