load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "internal",
    srcs = [
        "kotlinparser.go",
        "maven.go",
    ],
    data = [
        "//kotlin/src/com/github/srmocher/gazelle_kotlin/kotlinparser:parser_server",
    ],
    importpath = "github.com/srmocher/gazelle-kotlin/kotlin/internal",
    visibility = ["//kotlin:__subpackages__"],
    deps = [
        "//kotlin/protobuf",
        "@io_bazel_rules_go//go/runfiles:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials/insecure",
    ],
)

go_test(
    name = "internal_test",
    srcs = ["kotlinparser_test.go"],
    data = [
        "//kotlin/test/com/github/srmocher/gazelle_kotlin/kotlinparser/testdata",
    ],
    embed = [":internal"],
    deps = ["@com_github_stretchr_testify//assert"],
)
