load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")

proto_library(
    name = "protobuf_proto",
    srcs = [
        "kotlin_parser.proto",
        "kotlin_parser_service.proto",
    ],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "protobuf_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/srmocher/gazelle-kotlin/kotlin/protobuf",
    proto = ":protobuf_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "protobuf",
    embed = [":protobuf_go_proto"],
    importpath = "github.com/srmocher/gazelle-kotlin/kotlin/protobuf",
    visibility = ["//visibility:public"],
)

java_proto_library(
    name = "java_proto",
    deps = [":protobuf_proto"]
)

java_grpc_library(
    name = "java_grpc_lib",
    srcs = [":protobuf_proto"],
    deps = [":java_proto"]
)
