load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@com_github_grpc_grpc_kotlin//:kt_jvm_grpc.bzl", "kt_jvm_grpc_library", "kt_jvm_proto_library")

proto_library(
    name = "protobuf_proto",
    srcs = [
        "kotlin_parser.proto",
        "kotlin_parser_service.proto",
    ],
    visibility = ["//visibility:public"],
    deps = ["@googleapis//google/rpc:status_proto"],
)

go_proto_library(
    name = "protobuf_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/srmocher/gazelle-kotlin/kotlin/protobuf",
    proto = ":protobuf_proto",
    visibility = ["//visibility:public"],
    deps = ["@org_golang_google_genproto_googleapis_rpc//status"],
)

go_library(
    name = "protobuf",
    embed = [":protobuf_go_proto"],
    importpath = "github.com/srmocher/gazelle-kotlin/kotlin/protobuf",
    visibility = ["//visibility:public"],
)

kt_jvm_proto_library(
    name = "kt_proto",
    visibility = ["//kotlin:__subpackages__"],
    deps = [
        ":protobuf_proto",
    ],
)

kt_jvm_grpc_library(
    name = "kt_grpc_lib",
    srcs = [":protobuf_proto"],
    visibility = ["//kotlin:__subpackages__"],
    deps = [
        ":kt_proto",
    ],
)
